--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "Line that goes for a while in one direction and then stops",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha test.js"
   },
   "keywords": [
     "ray",
     "2d"
   ],
-  "author": "",
+  "author": "Paul Salaets <psalaets@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "vec2": "^1.5.0"
+  },
+  "devDependencies": {
+    "chai": "^1.9.2",
+    "mocha": "^2.0.1"
   }
 }
